fixed results overflow and spruced css

--- a/app/assets/stylesheets/boxes.css
+++ b/app/assets/stylesheets/boxes.css
@@ -1,9 +1,9 @@
 #create-leads-box {
   display: inline-block;
   position: relative;
-  top: 150px;
+  top: 85px;
   bottom: 0;
-  left: 30px;
+  left: 55px;
   right: 0;
   width: 270px;
   height: 150px;
@@ -14,9 +14,9 @@
 #claimed-leads-box {
   display: inline-block;
   position: relative;
-  top: 175px;
+  top: 125px;
   bottom: 0;
-  left: 30px;
+  left: 55px;
   right: 0;
   width: 270px;
   height: 150px;
@@ -35,4 +35,12 @@
   height: 500px;
   background-color: #323232;
   border: 3px solid #adadad;
+  overflow: auto;
+}
+
+#results-box {
+  padding-left: 60px;
+  padding-right: 30px;
+  overflow: auto;
+  height: 450px;
 }
